fix disappearing list's bullet on small screen

--- a/_widget.scss
+++ b/_widget.scss
@@ -133,7 +133,9 @@
   li {
     @extend %column-2;
 
-    display: block;
+    @media (min-width: $safe-for-content) {
+      display: block;
+    }
   }
 }
 
